# conways_game_of_life_rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
