[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Jason Cordial <jcordial@activecampaign.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"
rand = "0.8.4"
clap = "3.0.0-beta.2"
